@@ -1,5 +1,14 @@
 2004-07-02  Jamey Sharp  <jamey@minilop.net>
 
+	* src/xcb.h.m4:
+	* src/xcb_in.c:
+	Remove XCBEventQueueRemove and XCBEventQueueFind.
+	Their existence in the API constrains the
+	implementation, and they're not useful for real
+	code, like toolkits, anyway.
+
+2004-07-02  Jamey Sharp  <jamey@minilop.net>
+
 	* src/client-c.xcb:
 	* src/xcb.h.m4:
 	XCB headers are now compatible with C++ source.
